Projects page solved overflow

--- a/projects.css
+++ b/projects.css
@@ -188,7 +188,7 @@ body{
     .projects{
         width: 100%;
         height: 150px;
-        background-color: grey;
+        /* background-color: grey; */
     }
 
     .projects h5{
@@ -216,7 +216,7 @@ body{
 
     .project{
         width: 100%;
-        background-color: grey;
+        /* background-color: grey; */
         height: 180px;
     }
 
